7903636: update jextract sample scripts for --source option removal