@@ -3,9 +3,8 @@
  
 jextract \
   --output src \
-  --source \
   -t net.sourceforge.lpsolve \
   -l lpsolve55 \
   /usr/local/Cellar/lp_solve/5.5.2.11/include/lp_lib.h
 
-javac --enable-preview --source=22 -d . src/net/sourceforge/lpsolve/*.java
+javac --source=22 -d . src/net/sourceforge/lpsolve/*.java
